deps/PVRTT/Include/PVRTexLib.h

typedef const void* PVRTexLib_CPVRTextureHeader;
typedef void* PVRTexLib_PVRTexture;
typedef const void* PVRTexLib_CPVRTexture;
/*!***********************************************************************
 @brief     Creates a new texture based on a texture header, 
			and optionally copies the supplied texture data.
 @param[in]	header A handle to a previously allocated PVRTexLib_PVRTextureHeader.
 @param[in]	data Texture data (may be NULL)
 @return	A new texture handle.
*************************************************************************/
PVR_DLL PVRTexLib_PVRTexture PVRTexLib_CreateTexture(PVRTexLib_CPVRTextureHeader header, const void* data);
/*!***********************************************************************
 @brief     Free a texture.
 @param[in]	texture A handle to a previously allocated PVRTexLib_PVRTexture.
*************************************************************************/
PVR_DLL void PVRTexLib_DestroyTexture(PVRTexLib_PVRTexture texture);
/*!***********************************************************************
 @brief     Creates a new texture from a file.
			Accepted file formats are: PVR, KTX, KTX2, ASTC, DDS, BASIS,
			PNG, JPEG, BMP, TGA, GIF, HDR, EXR, PSD, PPM, PGM and PIC
 @param[in] filePath  File path to the texture to load from.
 @return	A new texture handle OR NULL on failure.
*************************************************************************/
PVR_DLL PVRTexLib_PVRTexture PVRTexLib_CreateTextureFromFile(const char* filePath);
/*!***********************************************************************
 @brief     Creates a new texture from a pointer that includes a header
			structure, meta data and texture data as laid out in a file.
			This functionality is primarily for user-defined file loading.
			Header may be any version of pvr.
 @param[in]	data Pointer to texture data
 @return	A new texture handle OR NULL on failure.
*************************************************************************/
PVR_DLL PVRTexLib_PVRTexture PVRTexLib_CreateTextureFromData(const void* data);
/*!***********************************************************************
 @brief     Returns a pointer to the texture's data.
			The data offset is calculated using the parameters below.
 @param[in]	texture A handle to a previously allocated PVRTexLib_PVRTexture.
 @param[in]	MIPLevel Offset to MIP Map levels
 @param[in]	arrayMember Offset to array members
 @param[in]	faceNumber Offset to face numbers
 @param[in]	ZSlice Offset to Z slice (3D textures only)
 @return	Pointer into the texture data OR NULL on failure.
*************************************************************************/
PVR_DLL void* PVRTexLib_GetTextureDataPtr(PVRTexLib_PVRTexture texture,
	PVRTuint32 MIPLevel,
	PVRTuint32 arrayMember,
	PVRTuint32 faceNumber,
	PVRTuint32 ZSlice);
/*!***********************************************************************
 @brief     Returns a read only texture header.
 @param[in]	texture A handle to a previously allocated PVRTexLib_PVRTexture.
 @return	PVRTexLib_PVRTextureHeader handle.
*************************************************************************/
PVR_DLL PVRTexLib_CPVRTextureHeader PVRTexLib_GetTextureHeader(PVRTexLib_CPVRTexture texture);
/*!***********************************************************************
 @brief		Saves the texture to a given file path. 
			File type will be determined by the extension present in the string.
			Valid extensions are: PVR, KTX, KTX2, ASTC, DDS, BASIS and h
			If no extension is present the PVR format will be selected. 
			Unsupported formats will result in failure.
			ASTC files only support ASTC texture formats.
			BASIS files only support Basis Universal texture formats.
 @param[in]	texture A handle to a previously allocated PVRTexLib_PVRTexture.
 @param[in]	filepath File path to write to
 @return	True if the method succeeds.
*************************************************************************/
PVR_DLL bool PVRTexLib_SaveTextureToFile(PVRTexLib_CPVRTexture texture, const char* filePath);
/*!***********************************************************************
 @brief     Generates MIPMap chain for a texture.
 @param[in]	texture		A handle to a previously allocated PVRTexLib_PVRTexture.
 @param[in]	filterMode	Filter mode
 @param[in]	mipMapsToDo	Number of levels of MIPMap chain to create.
						Use PVRTEX_ALLMIPLEVELS to create a full mip chain.
 @return	True if the method succeeds.
*************************************************************************/
PVR_DLL bool PVRTexLib_GenerateMIPMaps(PVRTexLib_PVRTexture texture, PVRTexLibResizeMode filterMode, PVRTint32 mipMapsToDo);